# example-pybind11-mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  app.py  bindings.cpp  main.py  mandelbrot.hpp  pyproject.toml
